examples/neg/lambdas/inference.effekt
module examples/neg/lambdas/inference

def main() = {

  def hof1(f: (Int) => String): Unit = ()
  def hof2(f: ((Int) => Boolean) => String): Unit = ()

  hof2(fun (f: (Int) => Boolean) {
    f(3);
    ""
  })

  hof2(fun(f: (Int) => Unit) { "" })
  hof1(fun(b: Boolean) { () })
}